--- a/app/src/main/res/layout/exo_player_control_view.xml
+++ b/app/src/main/res/layout/exo_player_control_view.xml
@@ -8,49 +8,104 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/playerTopView"
         android:layout_width="0dp"
+        android:fitsSystemWindows="true"
         android:layout_height="wrap_content"
-        android:layout_marginVertical="10dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
-        <ImageButton
-            android:id="@+id/btnBackArrow"
-            android:layout_width="wrap_content"
+        <LinearLayout
+            android:id="@+id/layoutVideoTitle"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginHorizontal="5dp"
-            android:background="@android:color/transparent"
-            android:contentDescription="@null"
-            android:src="@drawable/ic_arrow_left"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toStartOf="@id/txtVideoName"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
-
-        <TextView
-            android:id="@+id/txtVideoName"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginHorizontal="10dp"
-            android:fontFamily="@font/be_vietnam_pro__regular"
-            android:includeFontPadding="false"
-            android:maxLines="2"
-            android:text="@string/app_name"
-            android:textSize="18sp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toStartOf="@id/exo_subtitles"
-            app:layout_constraintStart_toEndOf="@id/btnBackArrow"
-            app:layout_constraintTop_toTopOf="parent" />
-
-        <ImageButton
-            android:id="@+id/exo_subtitles"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            app:layout_constraintStart_toEndOf="@id/txtVideoName"
+            android:layout_marginBottom="5dp"
+            android:orientation="horizontal"
+            app:layout_constraintBottom_toTopOf="@id/layoutTrack"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent">
+
+            <!-- Back Arrow -->
+            <ImageButton
+                android:id="@+id/btnBackArrow"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="@android:color/transparent"
+                android:contentDescription="@null"
+                android:padding="5dp"
+                android:src="@drawable/ic_arrow_left" />
+
+            <!-- Video Name -->
+            <TextView
+                android:id="@+id/txtVideoName"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
+                android:layout_marginStart="10dp"
+                android:layout_weight="1"
+                android:fontFamily="@font/be_vietnam_pro__regular"
+                android:includeFontPadding="false"
+                android:maxLines="2"
+                android:text="@string/app_name"
+                android:textSize="18sp" />
+        </LinearLayout>
+
+        <!-- Horizontal layout for subtitle and audio buttons -->
+        <LinearLayout
+            android:id="@+id/layoutTrack"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
             app:layout_constraintBottom_toBottomOf="parent"
-            />
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/layoutVideoTitle">
+
+            <!-- Subtitle Button -->
+            <ImageButton
+                android:id="@+id/btnSubTitle"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="@android:color/transparent"
+                android:contentDescription="@null"
+                android:padding="5dp"
+                android:src="@drawable/media3_icon_subtitles" />
+
+            <!-- Audio Button -->
+            <ImageButton
+                android:id="@+id/btnAudio"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="@android:color/transparent"
+                android:contentDescription="@null"
+                android:padding="5dp"
+                android:src="@drawable/media_session_service_notification_ic_music_note" />
+            <View
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1"/>
+
+            <ImageButton
+                android:id="@+id/btnOrientation"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:paddingHorizontal="6dp"
+                android:background="@android:color/transparent"
+                android:layout_gravity="center_vertical"
+                android:contentDescription="@null"
+                android:src="@drawable/ic_screen_rotation" />
+
+            <ImageButton
+                android:id="@+id/btnResize"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:background="@android:color/transparent"
+                android:layout_gravity="center_vertical"
+                android:contentDescription="@null"
+                android:padding="5dp"
+                android:src="@drawable/ic_fit_screen" />
+
+        </LinearLayout>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
