--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -10,8 +10,8 @@
         android:id="@+id/loader"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:visibility="visible"
         android:indeterminateTint="@color/colorSecondaryText"
+        android:visibility="gone"
         app:layout_constraintBottom_toTopOf="@id/lytEmpty"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -25,7 +25,8 @@
         app:layout_constraintBottom_toTopOf="@id/rvFolder"
         app:layout_constraintEnd_toStartOf="@id/glRight"
         app:layout_constraintStart_toEndOf="@id/glLeft"
-        app:layout_constraintTop_toBottomOf="@id/loader">
+        app:layout_constraintTop_toBottomOf="@id/loader"
+        tools:visibility="visible">
 
         <TextView
             android:id="@+id/txtEmptyMessage"
@@ -60,7 +61,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginVertical="10dp"
-            android:backgroundTint="@color/colorAccent"
+            android:backgroundTint="@color/colorBackgroundSecondary"
             android:includeFontPadding="false"
             android:text="@string/give_permission"
             android:textColor="@color/colorPrimaryText"
@@ -77,9 +78,9 @@
         android:visibility="gone"
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@id/glRight"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toEndOf="@id/glLeft"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/lytEmpty"
         app:layout_constraintVertical_bias="0.0"
         tools:listitem="@layout/item_folder" />
