--- a/app/src/main/res/layout/item_video.xml
+++ b/app/src/main/res/layout/item_video.xml
@@ -3,6 +3,9 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:paddingHorizontal="16dp"
+    android:paddingVertical="5dp"
+    android:background="?android:selectableItemBackground"
     android:layout_marginVertical="5dp">
 
     <com.google.android.material.imageview.ShapeableImageView
@@ -50,12 +53,16 @@
         app:layout_constraintStart_toStartOf="@id/txtVideoTitle"
         app:layout_constraintTop_toBottomOf="@id/txtVideoTitle" />
 
-    <ImageView
+    <ImageButton
         android:id="@+id/imgMenu"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:contentDescription="@null"
+        android:focusable="true"
         android:src="@drawable/ic_menu"
+        android:background="?android:selectableItemBackground"
+        android:padding="10dp"
+        android:clickable="true"
         android:layout_marginHorizontal="5dp"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
