--- a/app/src/main/res/values/style.xml
+++ b/app/src/main/res/values/style.xml
@@ -9,6 +9,14 @@
         <item name="android:textColor">@color/colorPrimaryText</item>
         <item name="android:includeFontPadding">false</item>
     </style>
+    <style name="textSmallLight" parent="TextAppearance.MaterialComponents.Subtitle2">
+        <item name="android:fontFamily">@font/be_vietnam_pro__light</item>
+        <item name="fontFamily">@font/be_vietnam_pro__light</item>
+        <item name="android:textSize">12sp</item>
+        <item name="textAllCaps">false</item>
+        <item name="android:textColor">@color/colorPrimaryText</item>
+        <item name="android:includeFontPadding">false</item>
+    </style>
 
     <style name="imageView_10">
         <item name="cornerSize">10%</item>
