PLAYER CONTROLLER BACKGROUND GRADIANT ADDED FOR BETTER READABILITY

--- a/app/src/main/res/drawable/shape_gradiant_background.xml
+++ b/app/src/main/res/drawable/shape_gradiant_background.xml
@@ -3,6 +3,6 @@
     <gradient
         android:angle="275"
         android:endColor="@android:color/transparent"
-        android:startColor="@color/colorBackground"
+        android:startColor="@color/black"
         android:type="linear" />
 </shape>
