--- a/app/src/main/res/drawable/shape_gradiant_background_reverse.xml
+++ b/app/src/main/res/drawable/shape_gradiant_background_reverse.xml
@@ -3,6 +3,6 @@
     <gradient
         android:angle="90"
         android:endColor="@android:color/transparent"
-        android:startColor="@color/colorBackground"
+        android:startColor="@color/black"
         android:type="linear" />
 </shape>
