--- a/app/src/main/res/values/style.xml
+++ b/app/src/main/res/values/style.xml
@@ -22,4 +22,8 @@
         <item name="cornerSize">10%</item>
         <item name="cornerFamily">rounded</item>
     </style>
+    <style name="imageView_Circle">
+        <item name="cornerSize">20%</item>
+        <item name="cornerFamily">rounded</item>
+    </style>
 </resources>
